# enpipe

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PIPELINE_DESIGN.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docker-publish.yml  hardware-integration.yml
.planning/: AUTO-DECISIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-package-foundation-migration-fast-test-tier/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-REVIEWS.md  01-VERIFICATION.md
.planning/phases/02-correctness-critical-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-REVIEWS.md  02-VERIFICATION.md
.planning/phases/03-concurrency-resolution-regression-baseline-ci/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-REVIEW.md  03-REVIEWS.md  03-VERIFICATION.md
.planning/phases/04-unified-cli-hardware-gated-real-media-validation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-REVIEW.md  04-REVIEWS.md  04-VERIFICATION.md
.planning/phases/05-single-command-pipeline-entry-point/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-REVIEW.md  05-REVIEWS.md  05-VERIFICATION.md
.planning/quick/260709-4h8-o-accepts-a-directory-output-filename-be/: 260709-4h8-PLAN.md  260709-4h8-SUMMARY.md
.planning/quick/260709-629-ctrl-c-sigint/: 260709-629-PLAN.md  260709-629-SUMMARY.md
.planning/quick/260709-6jo-live-tqdm/: 260709-6jo-PLAN.md  260709-6jo-SUMMARY.md
.planning/quick/260709-711-smooth-per-frame-progress-bar/: 260709-711-PLAN.md  260709-711-SUMMARY.md
.planning/quick/260709-89t-folder-batch-input-enpipe-run-detect-enc/: 260709-89t-PLAN.md  260709-89t-SUMMARY.md  260709-89t-VERIFICATION.md
.planning/quick/260709-gs0-compact-slim-runtime-container-image-for/: 260709-gs0-PLAN.md  260709-gs0-SUMMARY.md
.planning/quick/260709-hq2-github-actions-workflow-to-build-and-pub/: 260709-hq2-PLAN.md  260709-hq2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docker/: README.md
legacy/: encode_scenes.py  scene_detection.py
scratch/: parity_detect.py  parity_encode.py  profiling_debt03.py  profiling_debt03_out.txt
src/enpipe/cli/: __init__.py  main.py
src/enpipe/detection/: config.py  detect.py  parallel.py  pipeline.py  stream.py
src/enpipe/encoding/: audio.py  chunk.py  hdr.py  keyframes.py  metrics.py  pipeline.py  scenes_io.py
src/enpipe/mkv/: ebml.py
src/enpipe/shared/: batch.py  logging.py  proc.py
tests/fixtures/media/: README.md
tests/integration/: test_ebml_cross_validation.py  test_hardware_real_media.py  test_parallel_regression.py
tests/subprocess/detection/: test_stream.py
tests/subprocess/encoding/: test_audio.py  test_chunk.py  test_hdr.py  test_keyframes.py
tests/unit/cli/: test_batch_run.py  test_cli_dispatch.py  test_cli_run.py  test_cli_sigint.py  test_run_detect_roundtrip.py
tests/unit/detection/: test_batch_dispatch.py  test_detect.py  test_parallel_gate.py  test_parallel_merge.py  test_show_progress.py  test_stream_progress.py
tests/unit/encoding/: test_batch_dispatch.py  test_chunk.py  test_keyframes.py  test_metrics.py  test_pipeline_ordering.py  test_pipeline_wiring.py  test_resolve_output_path.py  test_scenes_io.py
tests/unit/mkv/: _ebml_builder.py  test_ebml.py
tests/unit/shared/: test_batch.py
